# deployment_fastapi

./: LICENSE  README.md
data/: breast_cancer.csv
mlops-poetry-fastapi-docker-1-loading-model-improvements/: Dockerfile  README.md  pyproject.toml
mlops-poetry-fastapi-docker-1-loading-model-improvements/mlops/: app.py  model.pickle  model.py
mlops-poetry-fastapi-docker-1-loading-model-improvements/mlops/routers/: iris.py
mlops-poetry-fastapi-docker-1-loading-model-improvements/mlops/schemas/: iris.py
mlops-poetry-fastapi-docker-1-loading-model-improvements/tests/: test_mldesde0.py
