[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Miguel López <miguel.mish@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sklearn = "^0.0"
numpy = "^1.21.2"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
